# ist

./: .env.sample  .gitignore  Dockerfile  Dockerfile-deploy  README.md  docker-compose-deploy.yml  docker-compose.yml  docker.md  init.sh  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  tailwind.config.js  tailwind.sh  todo.txt
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_customuser_karma.py
app/: forms.py  models.py  scores.py  settings.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_add_boards_and_keywords.py  0002_add_keyword_and_boards.py  0002_alter_comment_content.py  (+9 more)
astrowebsite/: asgi.py  settings.py  urls.py  wsgi.py
cache/: Dockerfile  run.sh
demo/: factories.py
ist/: Dockerfile  Dockerfile-deploy  LICENSE.txt  pyproject.toml  settings.py  tailwind.config.js  tailwind.sh  urls.py  wsgi.py
ist/accounts/: forms.py  views.py
ist/demo/: factories.py
ist/ist/: asgi.py  settings.py  urls.py
ist/mboard/: models.py  urls.py  views.py
ist/mboard/management/commands/: createboards.py
ist/mboard/templates/mboard/: comment_delete.html  comment_edit.html  comment_history.html  index.html  post_detail.html  post_edit.html  post_submit.html
ist/mboard/templates/mboard/includes/: post.html  replies.html
ist/mboard/templatetags/: mboard_extras.py
ist/mboard/tests/: test_models.py  test_permissions.py  test_views.py  test_voting.py
ist/scripts/: init.sh  run.sh
ist/static/css/: output.css
ist/templates/: base.html
ist/templates/registration/: login.html  password_reset_confirm.html  password_reset_done.html  signup.html
mb/: apps.py  forms.py  middleware.py  models.py  scores.py  urls.py  views.py
mboard/: apps.py  forms.py  middleware.py  models.py  settings.py  views.py
proxy/: Dockerfile
scripts/: init.sh  run.sh
templates/: base.html  navbar.html  pagination_footer.html
(+70 files in other folders)
