[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrowebsite"
version = "0.0.1"
authors = [
    { name="Giuseppe Dilillo", email="peppedilillo@gmail.com" },
]
description = "A message board for astrophysicists."
keywords = ["django", "message boards", "astrophysics"]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = "==3.12.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django==5.1.2",
    "psycopg==3.1.19",
    "psycopg-binary==3.1.19",
]

[project.optional-dependencies]
dev = [
    "black==24.10",
    "isort==5.13",
    "ipython==8.28",
]
