[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ist"
version = "0.0.1"
authors = [
    { name="Giuseppe Dilillo", email="peppedilillo@gmail.com" },
]
description = "A message board for astrophysics."
keywords = ["django", "message boards", "astrophysics"]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = "==3.12.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django==5.1",
    "psycopg==3.2",
    "psycopg-binary==3.2",
    "django-pghistory==3.5",
    "redis==5.2",
    "mistune==3.0",
    "django-ipware==7.0",
    "uWSGI==2.0.28",
    "faker==33.0",  # TODO: move later to dev options
]

[project.optional-dependencies]
dev = [
    "black==24.10",
    "isort==5.13",
    "ipython==8.29",
    "coverage==7.6",
    "djlint==1.36",
    "pyinstrument==5.0.0",
    "django-debug-toolbar==4.4",
]
